# biokit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
biokit/: __init__ .py  __init__.py  approximate.py  assembly.py  blast.py  codon_table.py  distance.py  indexing.py  io.py  kmers.py  matching.py  orf.py  sequence.py  stats.py
examples/: demo.py  sample.fasta
tests/: test_approximate.py  test_assembly.py  test_biokit.py  test_bm_preproc.py
